Fix issue SVN-4767: svnadmin dump shouldn't canonicalize svn:date.

* subversion/libsvn_repos/dump.c
  (write_revision_record): Don't canonicalize svn:date.

* subversion/tests/cmdline/svnadmin_tests.py
  (dump_no_canonicalize_svndate): New test.
  (test_list): Run it.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@1837151 13f79535-47bb-0310-9956-ffa450edef68